deployment/pokeapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokeapi-deployment
  namespace: pokeapi-prod
  labels:
    app: pokeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokeapi
  template:
    metadata:
      labels:
        app: pokeapi
    spec:
      containers:
      - name: pokeapi
        image: efrainperez/pokeapi:latest
        ports:
        - containerPort: 8080
