deployment/pokeapi-service-local.yml
apiVersion: v1
kind: Service
metadata:
  name: pokeapi
spec:
  selector:
    app: pokeapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
