deployment/pokeapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pokeapi
  namespace: pokeapi-prod
spec:
  type: NodePort
  selector:
    app: pokeapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
