deployment/pokeapi-ingress-local.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: pokeapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local-pokeapi.info
      http:
        paths:
        - path: /
          backend:
            serviceName: pokeapi
            servicePort: 8080
